tests/messages/valid/ack_response.hl7
MSH|^~\&|RECV_APP|RECV_FAC|SEND_APP|SEND_FAC|20260220131201||ACK|ACKMSG0001|P|2.3
MSA|AA|MSG0001|Message received and processed successfully
