tests/messages/errors/inv_type.hl7
MSH|^~\&|SEND_APP|SEND_FAC|RECV_APP|RECV_FAC|20260220132500||ZZZ^Z99|MSG0004|P|2.3
PID|1||1005^^^HOSP^MR||Test^Unknown||19850101|M
